# cintre

./: .env.example  .gitignore  CLAUDE.md  README.md  generate_image.py  generate_prompts.py  pitch_whatsapp_marketing.md  pyproject.toml  tuto_codex.md
autopub/: __init__.py  admin.py  app.py  brands.py  config.py  ingress.py  logsetup.py  outreach.py
autopub/channels/: __init__.py  registry.py  telegram.py
autopub/pipeline/: images.py  runner.py
cintre/: __init__.py  admin.py  app.py  config.py  db.py  ingress.py  jobstore.py  logsetup.py  models.py  outreach.py  web.py  worker.py
cintre/channels/: __init__.py  base.py  registry.py  telegram.py  whatsapp.py
cintre/pipeline/: __init__.py  anonymize.py  prompts.py  runner.py
da/: fashion-mode.md  generic.md
landing/: index.html  robots.txt  sitemap.xml  styles.css
landing/confidentialite/: index.html
landing/inscription/: index.html
landing/inscription/merci/: index.html
landing/logos/: identite.html
social/cover-fb/: cover.html
social/post-1/: slides.html
social/post-2/: slides.html
social/post-3/: slides.html
tests/: conftest.py  test_anonymize.py  test_db.py  test_images.py  test_jobstore.py  test_pipeline.py  test_threading.py
